--- a/src/pages/CheckoutPage/components/Time/Time.scss
+++ b/src/pages/CheckoutPage/components/Time/Time.scss
@@ -16,7 +16,6 @@
 		display: flex;
 		align-items: center;
 		justify-content: flex-end;
-		flex-grow: 1;
 
 		&__num {
 			font-size: 30px;
@@ -43,6 +42,10 @@
 				opacity: 0.8;
 			}
 		}
+	}
+
+	.radio-wrapper {
+		font-size: 13px;
 	}
 
 	.radio {
@@ -107,73 +110,6 @@
 		}
 	}
 
-	.policy-check {
-		display: flex;
-		align-items: center;
-		position: relative;
-
-		label {
-			padding-left: 30px;
-			margin-left: 0;
-			font-size: 13px;
-			min-width: 100%;
-			cursor: pointer;
-
-			&:hover {
-				opacity: 0.8;
-			}
-		}
-
-		&__input {
-			overflow: hidden;
-			opacity: 0;
-			position: relative;
-			height: 10px;
-			min-height: 10px;
-
-			&:checked + label {
-				&::after {
-					@include pseudo;
-					width: 22px;
-					height: 22px;
-					border: 1px solid $primaryText;
-					background: url("../../../../images/checkbox.svg");
-					background-repeat: no-repeat;
-					background-position: center;
-					background-size: contain;
-					background-color: $primaryText;
-					border-radius: 3px;
-					left: 0;
-					top: -5px;
-				}
-			}
-			&:not(:checked) + label {
-				&::after {
-					@include pseudo;
-					width: 22px;
-					height: 22px;
-					left: 0;
-					top: -5px;
-					border: 1px solid $primaryText;
-					border-radius: 3px;
-					background: $primaryText;
-					background-color: $primaryText;
-					cursor: pointer;
-
-					&:hover {
-						opacity: 0.8;
-					}
-				}
-			}
-			&:disabled + label {
-				&::after,
-				&::before {
-					opacity: 0.1;
-				}
-			}
-		}
-	}
-
 	.count-person {
 		border: 1px solid rgba(255, 255, 255, 0.1);
 		display: flex;
@@ -182,6 +118,9 @@
 		height: 60px;
 		margin-bottom: 20px;
 		position: relative;
+		align-items: center;
+		padding: 0 10px;
+   		justify-content: space-between;
 
 		&:last-of-type {
 			margin-bottom: 30px;
@@ -204,6 +143,29 @@
 		}
 	}
 
+	.inputTime {
+		border: 1px solid rgba(255, 255, 255, 0.1);
+		padding: 0 10px;
+		border-radius: 10px;
+		position: relative;
+		min-width: 220px;
+		display: flex;
+		justify-content: flex-end;
+
+		span {
+			position: absolute;
+			min-width: min-content;
+			white-space: nowrap;
+			top: 20px;
+			left: 10px;
+			cursor: default;
+		}
+
+		input {
+			border: none;
+		}
+	}
+
 	.input-enterTime.input {
 		border: 1px solid transparent;
 		border-radius: 0px;
@@ -215,12 +177,6 @@
 		margin-bottom: 20px;
 	}
 
-	.personTitle {
-		position: absolute;
-		top: -10px;
-		left: 10px;
-	}
-
 	.toggle-checkTime {
 		&__span {
 			font-size: 12px;
@@ -230,6 +186,78 @@
 
 			&:first-of-type {
 				border: 1px solid $tileTextColor;
+			}
+		}
+	}
+
+	.delivery-time {
+		margin-bottom: 20px;
+	}
+}
+
+.policy-check {
+	display: flex;
+	align-items: center;
+	position: relative;
+	font-size: 13px;
+
+	label {
+		padding-left: 30px;
+		margin-left: 0;
+		font-size: 13px;
+		min-width: 100%;
+		cursor: pointer;
+
+		&:hover {
+			opacity: 0.8;
+		}
+	}
+
+	&__input {
+		overflow: hidden;
+		opacity: 0;
+		position: relative;
+		height: 10px;
+		min-height: 10px;
+
+		&:checked + label {
+			&::after {
+				@include pseudo;
+				width: 22px;
+				height: 22px;
+				border: 1px solid $primaryText;
+				background: url("../../../../images/checkbox.svg");
+				background-repeat: no-repeat;
+				background-position: center;
+				background-size: contain;
+				background-color: $primaryText;
+				border-radius: 3px;
+				left: 0;
+				top: 0;
+			}
+		}
+		&:not(:checked) + label {
+			&::after {
+				@include pseudo;
+				width: 22px;
+				height: 22px;
+				left: 0;
+				top: 0;
+				border: 1px solid $primaryText;
+				border-radius: 3px;
+				background: $primaryText;
+				background-color: $primaryText;
+				cursor: pointer;
+
+				&:hover {
+					opacity: 0.8;
+				}
+			}
+		}
+		&:disabled + label {
+			&::after,
+			&::before {
+				opacity: 0.1;
 			}
 		}
 	}
