--- a/src/components/Card/Card.scss
+++ b/src/components/Card/Card.scss
@@ -11,7 +11,7 @@
 	transition: 0.3s;
 	cursor: pointer;
 	
-	margin: 0;
+	margin: 0 auto;
 
 	&:hover {
 		box-shadow: 0px 20px 20px rgba(43, 40, 40, 0.6);
