--- a/src/components/PromotionCard/PromotionCard.scss
+++ b/src/components/PromotionCard/PromotionCard.scss
@@ -35,6 +35,7 @@
 
 	&__image {
 		height: 100%;
+		width: 100%;
 	}
 
 	&__main-text {
@@ -61,11 +62,10 @@
 		margin-bottom: 10px;
 
 		overflow: hidden;
+		text-overflow: ellipsis;
 		display: -webkit-box;
 		-webkit-line-clamp: 4;
-		-webkit-box-orient: vertical;
-		line-height: 1.3em;
-		height: 2.7em;
+		-webkit-box-orient: vertical;	
 	}
 
 	&__dateTime-container {
@@ -88,10 +88,6 @@
 
 @media screen and (min-width: $desktop) {
 	.promotion-card {
-		&__card-description {
-			height: 5.3em;
-		}
-
 		&__image-wrapper {
 			height: 180px;
 		}
