--- a/src/components/CartPage/OfferCard/OfferCard.scss
+++ b/src/components/CartPage/OfferCard/OfferCard.scss
@@ -2,7 +2,6 @@
 
 @media screen and (min-width: $phone-sm) {
 	.offer-card {
-		background: $orderBackground;
 		padding: 20px 10px;
 		border-bottom: 1px solid grey;
 
@@ -73,7 +72,7 @@
 
 @media screen and (min-width: $desktop) {
 	.offer-card {
-		width: 273px;
+		// width: 273px;
 
 		&__wrapper {
 			display: block;
