--- a/src/components/Card/Card.scss
+++ b/src/components/Card/Card.scss
@@ -10,7 +10,7 @@
 
 	transition: 0.3s;
 	cursor: pointer;
-	
+
 	margin: 0 auto;
 
 	&:hover {
@@ -19,16 +19,22 @@
 
 	&__image-wrapper {
 		overflow: hidden;
-
 		display: flex;
 		flex-wrap: wrap;
 		justify-content: center;
-
 		height: 227px;
 		width: 100%;
-
 		border-top-left-radius: 10px;
 		border-top-right-radius: 10px;
+
+		span {
+			width: inherit;
+    		height: inherit;
+			
+			img {
+				object-fit: contain;
+			}
+		}
 	}
 
 	&__image {
