add order in cart function with localStorage

--- a/src/components/Card/Card.scss
+++ b/src/components/Card/Card.scss
@@ -120,6 +120,10 @@
 		&:hover {
 			background: linear-gradient(114.93deg, #83b68a 5.11%, #72a479 94%);
 		}
+
+		&:active {
+			background: linear-gradient(114.93deg, #68906d 5.11%, #72a479 94%);
+		}
 	}
 }
 
